--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "uuid": "^8.3.2"
   }
 }
